# slay-friday-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  loki-config.yaml
.github/workflows/: ci.yml  deploy.yml
migrations/: 20260413095505_create_media_table.down.sql  20260413095505_create_media_table.up.sql
src/: commands.rs  common.rs  config.rs  constants.rs  dto.rs  errors.rs  generation_controller.rs  gigachat.rs  handlers.rs  lib.rs  main.rs  scheduler.rs  states.rs  utils.rs
src/adapter/: postgres.rs
src/gigachat_api/: api.rs  dto.rs
src/grok_api/: api.rs  dto.rs
src/handlers/: add_media.rs  add_sticker.rs  delete.rs  delete_media.rs  delete_sticker.rs  friday.rs  get_media.rs  get_sticker.rs  list_available_media.rs  list_stickers.rs  mod.rs  model_info.rs  rename_media.rs  rename_sticker.rs  root_handler.rs  slay.rs  state_dispatcher.rs  utils.rs
src/mistral_api/: api.rs  dto.rs  mod.rs
src/repo/: dialogue_storage.rs  message_history_storage.rs  mod.rs
src/repo/media_storage/: dto.rs  storage.rs
src/repo/media_storage_postgres/: dto.rs  mod.rs  storage.rs
src/repo/sticker_storage/: dto.rs  storage.rs
