[package]
name = "slayFridayBot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["full"] }
dotenvy = "0.15"
chrono = "0.4.42"
chrono-tz = "0.10.4"
reqwest = "0.12.24"
thiserror = "2.0.17"
url = "2.5.7"
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
serde_with = "3.4.0"


[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
]
