[package]
name = "slayFridayBot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
tokio = { version =  "1.8", features = ["full"] }
dotenvy = "0.15"
chrono = "0.4.42"
chrono-tz = "0.10.4"
reqwest = "0.12.24"
thiserror = "2.0.17"
url = "2.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1.89"
rand = "0.10.0-rc.5"
tracing-loki = "0.2.6"
mockall = "0.14.0"
strum = { version = "0.27.2", features = ["derive"] }

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
]
